test/libyul/yulSyntaxTests/linkersymbol_shadowing.yul
{
    function linkersymbol(a) {}
}
// ====
// dialect: evm
// ----
// ParserError 5568: (15-27='linkersymbol'): Cannot use builtin function name "linkersymbol" as identifier name.
